[project]
name = "atom-openmm-unofficial"
description = "Asynchronous Replica Exchange with OpenMM"
authors = [{ name = "Emilio Gallicchio", email = "emilio.gallicchio@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = ["configobj", "numpy", "six"]

[project.urls]
"Homepage" = "https://github.com/Gallicchio-Lab/AToM-OpenMM"
"Bug Tracker" = "https://github.com/Gallicchio-Lab/AToM-OpenMM/issues"

[project.scripts]
abfe_structprep = "atom_openmm.abfe_structprep:abfe_structprep"
rbfe_structprep = "atom_openmm.rbfe_structprep:rbfe_structprep"
abfe_production = "atom_openmm.abfe_production:abfe_production"
rbfe_production = "atom_openmm.rbfe_production:rbfe_production"
make_atm_system_from_pdb = "atom_openmm.make_atm_system_from_pdb:main"
make_atm_system_from_rcpt_lig = "atom_openmm.make_atm_system_from_rcpt_lig:main"
make_atm_system_from_amber = "atom_openmm.make_atm_system_from_amber:main"

[tool.setuptools.packages.find]
where = [""]
include = ["atom_openmm*"]
namespaces = false

[tool.setuptools_scm]

[tool.pytest.ini_options]
python_files = "*.py"
python_classes = "_Test"
python_functions = "_test*"
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
